Fourth question is answered.

--- a/week_1/01_Intro_homework.ipynb
+++ b/week_1/01_Intro_homework.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 282,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -33,19 +33,19 @@
     "import seaborn as sns\n",
     "\n",
     "# This is January data of NYC Dataset\n",
-    "nyc_dataframe = pd.read_parquet(\"../data/yellow_tripdata_2022-01.parquet\")"
+    "nyc_df_train = pd.read_parquet(\"../data/yellow_tripdata_2022-01.parquet\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-19T12:11:52.412732Z",
-     "start_time": "2023-05-19T12:11:51.500335Z"
+     "end_time": "2023-05-19T13:26:25.069370Z",
+     "start_time": "2023-05-19T13:26:22.867951Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 283,
    "outputs": [
     {
      "name": "stdout",
@@ -56,13 +56,13 @@
     }
    ],
    "source": [
-    "print(\"Number of columns are: \", nyc_dataframe.shape[1])"
+    "print(\"Number of columns are: \", nyc_df_train.shape[1])"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-19T12:11:53.291027Z",
-     "start_time": "2023-05-19T12:11:53.203470Z"
+     "end_time": "2023-05-19T13:26:25.077618Z",
+     "start_time": "2023-05-19T13:26:25.072476Z"
     }
    }
   },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 284,
    "outputs": [
     {
      "name": "stdout",
@@ -117,13 +117,13 @@
     }
    ],
    "source": [
-    "nyc_dataframe.info()"
+    "nyc_df_train.info()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-19T12:11:53.932562Z",
-     "start_time": "2023-05-19T12:11:53.908581Z"
+     "end_time": "2023-05-19T13:26:25.130086Z",
+     "start_time": "2023-05-19T13:26:25.083827Z"
     }
    }
   },
@@ -138,34 +138,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 285,
    "outputs": [
     {
      "data": {
       "text/plain": "   VendorID tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\n0         1  2022-01-01 00:35:40   2022-01-01 00:53:29              2.0   \n1         1  2022-01-01 00:33:43   2022-01-01 00:42:07              1.0   \n2         2  2022-01-01 00:53:21   2022-01-01 01:02:19              1.0   \n3         2  2022-01-01 00:25:21   2022-01-01 00:35:23              1.0   \n4         2  2022-01-01 00:36:48   2022-01-01 01:14:20              1.0   \n\n   trip_distance  RatecodeID store_and_fwd_flag  PULocationID  DOLocationID  \\\n0           3.80         1.0                  N           142           236   \n1           2.10         1.0                  N           236            42   \n2           0.97         1.0                  N           166           166   \n3           1.09         1.0                  N           114            68   \n4           4.30         1.0                  N            68           163   \n\n   payment_type  fare_amount  extra  mta_tax  tip_amount  tolls_amount  \\\n0             1         14.5    3.0      0.5        3.65           0.0   \n1             1          8.0    0.5      0.5        4.00           0.0   \n2             1          7.5    0.5      0.5        1.76           0.0   \n3             2          8.0    0.5      0.5        0.00           0.0   \n4             1         23.5    0.5      0.5        3.00           0.0   \n\n   improvement_surcharge  total_amount  congestion_surcharge  airport_fee  \\\n0                    0.3         21.95                   2.5          0.0   \n1                    0.3         13.30                   0.0          0.0   \n2                    0.3         10.56                   0.0          0.0   \n3                    0.3         11.80                   2.5          0.0   \n4                    0.3         30.30                   2.5          0.0   \n\n    duration  \n0  17.816667  \n1   8.400000  \n2   8.966667  \n3  10.033333  \n4  37.533333  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>VendorID</th>\n      <th>tpep_pickup_datetime</th>\n      <th>tpep_dropoff_datetime</th>\n      <th>passenger_count</th>\n      <th>trip_distance</th>\n      <th>RatecodeID</th>\n      <th>store_and_fwd_flag</th>\n      <th>PULocationID</th>\n      <th>DOLocationID</th>\n      <th>payment_type</th>\n      <th>fare_amount</th>\n      <th>extra</th>\n      <th>mta_tax</th>\n      <th>tip_amount</th>\n      <th>tolls_amount</th>\n      <th>improvement_surcharge</th>\n      <th>total_amount</th>\n      <th>congestion_surcharge</th>\n      <th>airport_fee</th>\n      <th>duration</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>2022-01-01 00:35:40</td>\n      <td>2022-01-01 00:53:29</td>\n      <td>2.0</td>\n      <td>3.80</td>\n      <td>1.0</td>\n      <td>N</td>\n      <td>142</td>\n      <td>236</td>\n      <td>1</td>\n      <td>14.5</td>\n      <td>3.0</td>\n      <td>0.5</td>\n      <td>3.65</td>\n      <td>0.0</td>\n      <td>0.3</td>\n      <td>21.95</td>\n      <td>2.5</td>\n      <td>0.0</td>\n      <td>17.816667</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>2022-01-01 00:33:43</td>\n      <td>2022-01-01 00:42:07</td>\n      <td>1.0</td>\n      <td>2.10</td>\n      <td>1.0</td>\n      <td>N</td>\n      <td>236</td>\n      <td>42</td>\n      <td>1</td>\n      <td>8.0</td>\n      <td>0.5</td>\n      <td>0.5</td>\n      <td>4.00</td>\n      <td>0.0</td>\n      <td>0.3</td>\n      <td>13.30</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>8.400000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>2022-01-01 00:53:21</td>\n      <td>2022-01-01 01:02:19</td>\n      <td>1.0</td>\n      <td>0.97</td>\n      <td>1.0</td>\n      <td>N</td>\n      <td>166</td>\n      <td>166</td>\n      <td>1</td>\n      <td>7.5</td>\n      <td>0.5</td>\n      <td>0.5</td>\n      <td>1.76</td>\n      <td>0.0</td>\n      <td>0.3</td>\n      <td>10.56</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>8.966667</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2</td>\n      <td>2022-01-01 00:25:21</td>\n      <td>2022-01-01 00:35:23</td>\n      <td>1.0</td>\n      <td>1.09</td>\n      <td>1.0</td>\n      <td>N</td>\n      <td>114</td>\n      <td>68</td>\n      <td>2</td>\n      <td>8.0</td>\n      <td>0.5</td>\n      <td>0.5</td>\n      <td>0.00</td>\n      <td>0.0</td>\n      <td>0.3</td>\n      <td>11.80</td>\n      <td>2.5</td>\n      <td>0.0</td>\n      <td>10.033333</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2</td>\n      <td>2022-01-01 00:36:48</td>\n      <td>2022-01-01 01:14:20</td>\n      <td>1.0</td>\n      <td>4.30</td>\n      <td>1.0</td>\n      <td>N</td>\n      <td>68</td>\n      <td>163</td>\n      <td>1</td>\n      <td>23.5</td>\n      <td>0.5</td>\n      <td>0.5</td>\n      <td>3.00</td>\n      <td>0.0</td>\n      <td>0.3</td>\n      <td>30.30</td>\n      <td>2.5</td>\n      <td>0.0</td>\n      <td>37.533333</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 252,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nyc_dataframe[\"duration\"] = nyc_dataframe[\"tpep_dropoff_datetime\"]-nyc_dataframe[\"tpep_pickup_datetime\"]\n",
-    "nyc_dataframe.duration = nyc_dataframe.duration.apply(lambda td: td.total_seconds()/60)\n",
-    "nyc_dataframe.head()"
+    "nyc_df_train[\"duration\"] = nyc_df_train[\"tpep_dropoff_datetime\"]-nyc_df_train[\"tpep_pickup_datetime\"]\n",
+    "nyc_df_train.duration = nyc_df_train.duration.apply(lambda td: td.total_seconds()/60)\n",
+    "nyc_df_train.head()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-19T12:12:14.658916Z",
-     "start_time": "2023-05-19T12:11:57.045508Z"
+     "end_time": "2023-05-19T13:26:52.963652Z",
+     "start_time": "2023-05-19T13:26:26.248016Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 286,
    "outputs": [
     {
      "name": "stdout",
@@ -185,19 +185,19 @@
     "\"\"\"\n",
     "\n",
     "# according to that calculation description we can define our solution like below\n",
-    "x = abs(nyc_dataframe.duration-nyc_dataframe.duration.mean())**2\n",
+    "x = abs(nyc_df_train.duration-nyc_df_train.duration.mean())**2\n",
     "print(math.sqrt(x.sum() / len(x)))\n",
     "\n",
     "# we can also choose the easy way and use built-in function\n",
-    "print(nyc_dataframe.duration.std())\n",
+    "print(nyc_df_train.duration.std())\n",
     "\n",
     "# 46.45 is the right answer for this question"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-19T12:12:14.948287Z",
-     "start_time": "2023-05-19T12:12:14.662785Z"
+     "end_time": "2023-05-19T13:26:53.136505Z",
+     "start_time": "2023-05-19T13:26:52.964661Z"
     }
    }
   },
@@ -216,63 +216,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 287,
    "outputs": [
     {
      "data": {
       "text/plain": "count    2.463931e+06\nmean     1.421220e+01\nstd      4.644531e+01\nmin     -3.442400e+03\n25%      6.316667e+00\n50%      1.018333e+01\n75%      1.616667e+01\nmax      8.513183e+03\nName: duration, dtype: float64"
      },
-     "execution_count": 254,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# The statistics of the duration column is:\n",
-    "nyc_dataframe.duration.describe()"
+    "nyc_df_train.duration.describe()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-19T12:12:18.607233Z",
-     "start_time": "2023-05-19T12:12:18.463656Z"
+     "end_time": "2023-05-19T13:26:53.237997Z",
+     "start_time": "2023-05-19T13:26:53.071633Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 288,
    "outputs": [
     {
      "data": {
       "text/plain": "VendorID                     0\ntpep_pickup_datetime         0\ntpep_dropoff_datetime        0\npassenger_count          71503\ntrip_distance                0\nRatecodeID               71503\nstore_and_fwd_flag       71503\nPULocationID                 0\nDOLocationID                 0\npayment_type                 0\nfare_amount                  0\nextra                        0\nmta_tax                      0\ntip_amount                   0\ntolls_amount                 0\nimprovement_surcharge        0\ntotal_amount                 0\ncongestion_surcharge     71503\nairport_fee              71503\nduration                     0\ndtype: int64"
      },
-     "execution_count": 255,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Do we have null values in duration records? No\n",
-    "nyc_dataframe.isnull().sum()"
+    "nyc_df_train.isnull().sum()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-19T12:12:20.424268Z",
-     "start_time": "2023-05-19T12:12:19.212200Z"
+     "end_time": "2023-05-19T13:26:54.081278Z",
+     "start_time": "2023-05-19T13:26:53.192778Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 289,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot: xlabel='duration', ylabel='Count'>"
      },
-     "execution_count": 256,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -286,27 +286,28 @@
     }
    ],
    "source": [
-    "# One of the best ways to describe a variable is to report the values that appear in the dataset and how many times each value appears. This is called distribution of the variable.\n",
-    "sns.histplot(nyc_dataframe.duration)"
+    "# One of the best ways to describe a variable is to report the values that appear in the\n",
+    "# dataset and how many times each value appears. This is called distribution of the variable.\n",
+    "sns.histplot(nyc_df_train.duration)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-19T12:15:01.485932Z",
-     "start_time": "2023-05-19T12:12:20.626364Z"
+     "end_time": "2023-05-19T13:29:37.602416Z",
+     "start_time": "2023-05-19T13:26:54.081733Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 290,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "AxesSubplot(0.125,0.11;0.775x0.77)\n",
-      "98.27547930522405 of the records left, after dropping outliers 98.27547930522405\n"
+      "98.27547930522405 of the records left, after dropping outliers\n"
      ]
     },
     {
@@ -321,8 +322,8 @@
    "source": [
     "# nyc_dataframe.duration = nyc_dataframe.duration[(nyc_dataframe.duration >= 1) & (nyc_dataframe.duration <= 60)]\n",
     "\n",
-    "before_dropping_outliers = nyc_dataframe.shape[0]\n",
-    "nyc_dataframe = nyc_dataframe[(nyc_dataframe.duration >= 1) & (nyc_dataframe.duration <= 60)]\n",
+    "before_dropping_outliers = nyc_df_train.shape[0]\n",
+    "nyc_dataframe = nyc_df_train[(nyc_df_train.duration >= 1) & (nyc_df_train.duration <= 60)]\n",
     "after_dropping_outliers = nyc_dataframe.shape[0]\n",
     "\n",
     "fraction_left = (after_dropping_outliers / before_dropping_outliers)*100\n",
@@ -330,14 +331,147 @@
     "# Let's look at the duration's histplot, after dropping outliers\n",
     "print(sns.histplot(nyc_dataframe.duration))\n",
     "\n",
-    "print(f\"{fraction_left} of the records left, after dropping outliers\", fraction_left)\n"
+    "print(f\"{fraction_left} of the records left, after dropping outliers\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-19T12:15:06.125125Z",
-     "start_time": "2023-05-19T12:15:01.500425Z"
+     "end_time": "2023-05-19T13:29:41.629044Z",
+     "start_time": "2023-05-19T13:29:37.596886Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Q4. One-hot encoding\n",
+    "\n",
+    "Let's apply one-hot encoding to the pickup and dropoff location IDs. We'll use only these two features for our model.\n",
+    "What's the dimensionality of this matrix (number of columns)?"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 1. Turn the dataframe into a list of dictionaries"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "\n",
+    "# initialize the Dictionary Vectorizer\n",
+    "dict_vectorizer = DictVectorizer()\n",
+    "\n",
+    "# let's choose our categorical fields\n",
+    "categorical_columns = ['PULocationID', 'DOLocationID']\n",
+    "\n",
+    "# turn selected columns into a list of dictionaries\n",
+    "train_dicts = nyc_df_train[categorical_columns].to_dict(orient='records')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-19T13:29:48.749650Z",
+     "start_time": "2023-05-19T13:29:41.696120Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 2. Fit a dictionary vectorizer"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "outputs": [],
+   "source": [
+    "X_train = dict_vectorizer.fit_transform(train_dicts)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-19T13:29:55.341200Z",
+     "start_time": "2023-05-19T13:29:48.804312Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 3. Get a feature matrix from it"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dimensionality of this matrix is, (2463931, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The dimensionality of this matrix is, {X_train.shape}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-19T13:29:55.352968Z",
+     "start_time": "2023-05-19T13:29:55.345792Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of columns of this matrix is, 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The number of columns of this matrix is, {X_train.shape[1]}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-19T13:29:55.371963Z",
+     "start_time": "2023-05-19T13:29:55.358605Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
