--- a/week_2/02_experiment_tracking_hw.ipynb
+++ b/week_2/02_experiment_tracking_hw.ipynb
@@ -6,8 +6,23 @@
     "# Homework - Experiemt Tracking\n",
     "The goal of this homework is to get familiar with tools like MLflow for experiment tracking and model management.\n",
     "## Q1. Install the package\n",
-    "What's the version that you have?\n",
-    "mlflow, version 2.3.2"
+    "To get started with MLflow you'll need to install the appropriate Python package.\n",
+    "\n",
+    "For this we recommend creating a separate Python environment, for example, you can use [conda environments](https://docs.conda.io/projects/conda/en/latest/user-guide/getting-started.html#managing-envs),\n",
+    "and then install the package there with `pip` or `conda`.\n",
+    "\n",
+    "Once you installed the package, run the command `mlflow --version` and check the output.\n",
+    "\n",
+    "What's the version that you have?"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The answer is : __mlflow, version 2.3.2__"
    ],
    "metadata": {
     "collapsed": false
@@ -17,7 +32,80 @@
    "cell_type": "markdown",
    "source": [
     "## Q2. Download and preprocess the data\n",
-    "We'll use the Green Taxi Trip Records dataset to predict the amount of tips for each trip."
+    "We'll use the Green Taxi Trip Records dataset to predict the amount of tips for each trip.\n",
+    "Download the data for January, February and March 2022 in parquet format from [here](https://www1.nyc.gov/site/tlc/about/tlc-trip-record-data.page).\n",
+    "\n",
+    "Use the script `preprocess_data.py` located in the folder `homework` to preprocess the data.\n",
+    "\n",
+    "The script will:\n",
+    "\n",
+    "* load the data from the folder `<TAXI_DATA_FOLDER>` (the folder where you have downloaded the data),\n",
+    "* fit a `DictVectorizer` on the training set (January 2022 data),\n",
+    "* save the preprocessed datasets and the `DictVectorizer` to disk.\n",
+    "\n",
+    "Your task is to download the datasets and then execute this command:\n",
+    "\n",
+    "```\n",
+    "python preprocess_data.py --raw_data_path <TAXI_DATA_FOLDER> --dest_path ./output\n",
+    "```\n",
+    "\n",
+    "Tip: go to `02-experiment-tracking/homework/` folder before executing the command and change the value of `<TAXI_DATA_FOLDER>` to the location where you saved the data.\n",
+    "\n",
+    "So what's the size of the saved `DictVectorizer` file?\n",
+    "* 54 kB\n",
+    "* 154 kB\n",
+    "* 54 MB\n",
+    "* 154 MB"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The answer is: __154 kB__"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Q3. Train a model with autolog\n",
+    "\n",
+    "We will train a `RandomForestRegressor` (from Scikit-Learn) on the taxi dataset.\n",
+    "\n",
+    "We have prepared the training script `train.py` for this exercise, which can be also found in the folder `homework`.\n",
+    "\n",
+    "The script will:\n",
+    "\n",
+    "* load the datasets produced by the previous step,\n",
+    "* train the model on the training set,\n",
+    "* calculate the RMSE score on the validation set.\n",
+    "\n",
+    "Your task is to modify the script to enable **autologging** with MLflow, execute the script and then launch the MLflow UI to check that the experiment run was properly tracked.\n",
+    "\n",
+    "Tip 1: don't forget to wrap the training code with a `with mlflow.start_run():` statement as we showed in the videos.\n",
+    "\n",
+    "Tip 2: don't modify the hyperparameters of the model to make sure that the training will finish quickly.\n",
+    "\n",
+    "What is the value of the `max_depth` parameter:\n",
+    "\n",
+    "* 4\n",
+    "* 6\n",
+    "* 8\n",
+    "* 10"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The answer is: 10"
    ],
    "metadata": {
     "collapsed": false
