--- a/week_2/02_experiment_tracking_hw.ipynb
+++ b/week_2/02_experiment_tracking_hw.ipynb
@@ -112,6 +112,45 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Q4. Tune model hyperparameters\n",
+    "\n",
+    "Now let's try to reduce the validation error by tuning the hyperparameters of the `RandomForestRegressor` using `optuna`.\n",
+    "We have prepared the script `hpo.py` for this exercise.\n",
+    "\n",
+    "Your task is to modify the script `hpo.py` and make sure that the validation RMSE is logged to the tracking server for each run of the hyperparameter optimization (you will need to add a few lines of code to the `objective` function) and run the script without passing any parameters.\n",
+    "\n",
+    "After that, open UI and explore the runs from the experiment called `random-forest-hyperopt` to answer the question below.\n",
+    "\n",
+    "Note: Don't use autologging for this exercise.\n",
+    "\n",
+    "The idea is to just log the information that you need to answer the question below, including:\n",
+    "\n",
+    "* the list of hyperparameters that are passed to the `objective` function during the optimization,\n",
+    "* the RMSE obtained on the validation set (February 2022 data).\n",
+    "\n",
+    "What's the best validation RMSE that you got?\n",
+    "\n",
+    "* 1.85\n",
+    "* 2.15\n",
+    "* 2.45\n",
+    "* 2.85"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The answer is: 2.45"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
