Week 2, Homework, 4th question answered updated.

--- a/week_2/02_experiment_tracking_hw.ipynb
+++ b/week_2/02_experiment_tracking_hw.ipynb
@@ -151,10 +151,53 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Q5. Promote the best model to the model registry\n",
+    "\n",
+    "The results from the hyperparameter optimization are quite good. So, we can assume that we are ready to test some of these models in production.\n",
+    "In this exercise, you'll promote the best model to the model registry. We have prepared a script called `register_model.py`, which will check the results from the previous step and select the top 5 runs.\n",
+    "After that, it will calculate the RMSE of those models on the test set (March 2022 data) and save the results to a new experiment called `random-forest-best-models`.\n",
+    "\n",
+    "Your task is to update the script `register_model.py` so that it selects the model with the lowest RMSE on the test set and registers it to the model registry.\n",
+    "\n",
+    "Tips for MLflow:\n",
+    "\n",
+    "* you can use the method `search_runs` from the `MlflowClient` to get the model with the lowest RMSE,\n",
+    "* to register the model you can use the method `mlflow.register_model` and you will need to pass the right `model_uri` in the form of a string that looks like this: `\"runs:/<RUN_ID>/model\"`, and the name of the model (make sure to choose a good one!).\n",
+    "\n",
+    "What is the test RMSE of the best model?\n",
+    "\n",
+    "* 1.885\n",
+    "* 2.185\n",
+    "* 2.555\n",
+    "* 2.955"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Q6. Model metadata\n",
+    "\n",
+    "Now explore your best model in the model registry using UI. What information does the model registry contain about each model?\n",
+    "\n",
+    "* Version number\n",
+    "* Source experiment\n",
+    "* Model signature\n",
+    "* All the above answers are correct\n"
+   ],
    "metadata": {
     "collapsed": false
    }
