Week 2, Homework, 5th question answered.

--- a/week_2/02_experiment_tracking_hw.ipynb
+++ b/week_2/02_experiment_tracking_hw.ipynb
@@ -178,10 +178,10 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "The answer is: 2.285"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -198,6 +198,15 @@
     "* Model signature\n",
     "* All the above answers are correct\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
