--- a/week_2/02_experiment_tracking_hw.ipynb
+++ b/week_2/02_experiment_tracking_hw.ipynb
@@ -180,7 +180,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The answer is: 2.285"
+    "The answer is: 2.285 (None of the above)"
    ],
    "metadata": {
     "collapsed": false
@@ -197,6 +197,15 @@
     "* Source experiment\n",
     "* Model signature\n",
     "* All the above answers are correct\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The answer is, All the above answers are correct."
    ],
    "metadata": {
     "collapsed": false
