wandb homework file updated.

--- a/week_2/wandb_homework.ipynb
+++ b/week_2/wandb_homework.ipynb
@@ -85,12 +85,7 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
     "# Q3. Train a model with Weights & Biases logging\n",
     "\n",
@@ -130,8 +125,15 @@
     "* 4\n",
     "* 6\n",
     "* 8\n",
-    "* 10\n",
-    "\n",
+    "* 10\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Q4. Tune model hyperparameters\n",
     "\n",
     "Now let's try to reduce the validation error by tuning the hyperparameters of the `RandomForestRegressor` using [Weights & Biases Sweeps](https://docs.wandb.ai/guides/sweeps). We have prepared the script `sweep.py` for this exercise in the `homework-wandb` directory.\n",
@@ -150,8 +152,15 @@
     "* `max_depth`\n",
     "* `n_estimators`\n",
     "* `min_samples_split`\n",
-    "* `min_samples_leaf`\n",
-    "\n",
+    "* `min_samples_leaf`"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Q5. Link the best model to the model registry\n",
     "\n",
     "Now that we have obtained the optimal set of hyperparameters and trained the best model, we can assume that we are ready to test some of these models in production. In this exercise, you'll create a model registry and link the best model from the Sweep to the model registry.\n",
@@ -168,8 +177,15 @@
     "* Metric (MSE)\n",
     "* Source run\n",
     "* All of these\n",
-    "* None of these\n",
-    "\n",
+    "* None of these\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Submit the results\n",
     "\n",
     "* Submit your results here: https://forms.gle/ndmTHeogFLeckSHm9\n",
@@ -182,7 +198,19 @@
     "The deadline for submitting is 6 June, 23:00 (Berlin time).\n",
     "\n",
     "After that, the form will be closed."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
