--- a/week_2/wandb_homework.ipynb
+++ b/week_2/wandb_homework.ipynb
@@ -37,7 +37,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The answer is: wandb, version 0.15.3"
+    "__The answer is__: wandb, version 0.15.3"
    ],
    "metadata": {
     "collapsed": false
@@ -79,6 +79,15 @@
     "* 154 kB\n",
     "* 54 MB\n",
     "* 154 MB"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "__The answer is__: 154 kB"
    ],
    "metadata": {
     "collapsed": false
