--- a/week_2/wandb_homework.ipynb
+++ b/week_2/wandb_homework.ipynb
@@ -37,7 +37,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "__The answer is__: wandb, version 0.15.3"
+    "__The answer is__: `wandb, version 0.15.3`"
    ],
    "metadata": {
     "collapsed": false
@@ -87,7 +87,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "__The answer is__: 154 kB"
+    "__The answer is__: `154 kB`"
    ],
    "metadata": {
     "collapsed": false
@@ -143,6 +143,15 @@
   {
    "cell_type": "markdown",
    "source": [
+    "__The result is__: `10`"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Q4. Tune model hyperparameters\n",
     "\n",
     "Now let's try to reduce the validation error by tuning the hyperparameters of the `RandomForestRegressor` using [Weights & Biases Sweeps](https://docs.wandb.ai/guides/sweeps). We have prepared the script `sweep.py` for this exercise in the `homework-wandb` directory.\n",
@@ -170,6 +179,15 @@
   {
    "cell_type": "markdown",
    "source": [
+    "__The result is__: `max_depth`"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Q5. Link the best model to the model registry\n",
     "\n",
     "Now that we have obtained the optimal set of hyperparameters and trained the best model, we can assume that we are ready to test some of these models in production. In this exercise, you'll create a model registry and link the best model from the Sweep to the model registry.\n",
@@ -187,6 +205,15 @@
     "* Source run\n",
     "* All of these\n",
     "* None of these\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "__The answer is__: `All of these`"
    ],
    "metadata": {
     "collapsed": false
